# Community

./: TELEGRAM_SETUP.md  community-landing.css  community-landing.html  community-landing.js  index.html  oferta.html  package-lock.json  package.json  privacy.html  prompt_0_base_infrastructure.md  prompt_1_backend_api_funnels (1).md  prompt_2_funnel_engine.md  server.js
telegram-bot-backend/: .dockerignore  .env.docker.example  .env.example  ADMIN_PANEL_GUIDE.md  Dockerfile  README.md  docker-compose.yml  fix_seed.py  generate_migration.py  pyproject.toml  show_json.py  tables.sql
telegram-bot-backend/alembic/: env.py
telegram-bot-backend/alembic/versions/: 001_initial_schema.py  002_scheduled_tasks_execute_at.py
telegram-bot-backend/app/: config.py
telegram-bot-backend/app/admin/: auth.py  settings_crypto.py
telegram-bot-backend/app/api/: main.py
telegram-bot-backend/app/bot/: keyboards.py  main.py  router.py
telegram-bot-backend/app/db/: base.py  bootstrap_scenarios.py  init_db.py  models.py  seed.py  session.py
telegram-bot-backend/app/funnels/: __init__.py  condition_checker.py  cross_entry.py  engine.py  keyboard_builder.py  message_sender.py
telegram-bot-backend/app/payments/: verification.py
telegram-bot-backend/app/schemas/: api.py  step_config.py
telegram-bot-backend/scripts/: deploy.sh  migrate_to_json_config.py
telegram-bot-backend/telegram_sales_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
telegram-bot-backend/tests/: conftest.py  test_api_smoke.py  test_bot_session.py  test_engine.py  test_funnels_api.py
(+46 files in other folders)
