[project]
name = "telegram-sales-bot"
version = "0.1.0"
description = "Telegram bot for digital product sales funnels"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.6.0,<4.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "sqlalchemy>=2.0.32,<3.0.0",
  "asyncpg>=0.29.0,<1.0.0",
  "alembic>=1.13.2,<2.0.0",
  "celery>=5.4.0,<6.0.0",
  "redis>=5.0.8,<6.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "jinja2>=3.1.4,<4.0.0",
  "httpx>=0.27.0,<1.0.0",
  "cryptography>=43.0.0,<44.0.0",
]

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
